# Thermal_IPT430M

./: .gitignore  CMakeLists.txt  README.md
include/: SgpApi.h  SgpParam.h
lib/: GuiderApiTest
src/: IPT430M_ros2_node.cpp  test_demo.cpp  test_getTempMatrix.cpp
